CRP - Global Campus Link colors

--- a/website/03-Research/Projects/children-rights/accordions-rlf-gchq.html
+++ b/website/03-Research/Projects/children-rights/accordions-rlf-gchq.html
@@ -1,7 +1,7 @@
 <div class="table_accordion_cell">
     <div class="accordion accordion_gc">
         <div class="icon_e_title_accordion">
-            <p class="title_accordion titolo_gc_hq">Headquarters (GCHQ)</p>
+            <p class="title_accordion titolo_gc_hq">Global Campus of Human Rights</p>
             <p class="number_universities">12 Projects</p>
             <div class="piu_accordion">
                 <div class="verticale">[nbsp]</div>
@@ -22,9 +22,9 @@
                     <p class="margin_bottom_20">Child rights strategic litigation (CRSL) - defined as litigation that seeks to bring about legal and social change in terms of children’s enjoyment of their rights – is a pressing topic in advocacy and academic circles. Given its increased deployment as a tool for advancing children’s rights by a range of different actors, it is vital to engage effectively with the challenges and opportunities presented by CRSL.</p>
                     <p class="margin_bottom_20">Focused on the development, implementation, impact assessment and critique of CRSL from a child rights perspective, this project will contribute directly to strengthening the capacity of such litigation to deliver on children’s rights globally. It will do so by expanding academic engagement with CRSL, while bringing a number of key CRSL cases before judicial and quasi-judicial bodies.</p>
                     <p class="margin_bottom_20">The project seeks to effect concrete change via a practical methodology where academia and activism meet in the service of children’s rights. As such, the project entails a continuous exchange between research and practice directed towards concrete real-world impact.</p>
-                    <p class="margin_bottom_20">For more information, please visit the <a href="https://www.nottingham.ac.uk/hrlc/research/advancing-child-rights.aspx" class="titolo_gc_hq" target="_blank">project website</a>.</p>
+                    <p class="margin_bottom_20">For more information, please visit the <a href="https://www.nottingham.ac.uk/hrlc/research/advancing-child-rights.aspx" class="titolo_gc_europe" target="_blank">project website</a>.</p>
                     <p><strong>Project Contact</strong>: Aoife Nolan, University of Nottingham</p>
-                    <p class="margin_bottom_20"><strong>E-mail</strong>: <a href="mailto:aoife.Nolan@nottingham.ac.uk" class="titolo_gc_hq">aoife.Nolan@nottingham.ac.uk</a></p>
+                    <p class="margin_bottom_20"><strong>E-mail</strong>: <a href="mailto:aoife.Nolan@nottingham.ac.uk" class="titolo_gc_europe">aoife.Nolan@nottingham.ac.uk</a></p>
                 </div>
             </div>
             <div class="accordion margin_bottom_20 accordion_gc_hq">
@@ -39,7 +39,7 @@
                     <p>[nbsp]</p>
                     <p class="margin_bottom_20">Children and their right to liberty were the subject of the UN Global Study on Children Deprived of Liberty (GS). Children were also involved in the Study to make sure that their voices were heard. The GS team has recently completed a child-friendly summary and an executive summary of the GS as part of the Follow-Up Initiation Process. Within this framework, the goal of this project is to create a high-quality animated video for children aged 14-18 year in English, Spanish, French and Arabic (four of the widest spoken languages). Such a multilingual, educational movie will not only ensure that a wider children population is reached, but also that children actually spend time in watching an educational product that best suit their age and learning style, therefore improving learning and retention. </p>
                     <p class="margin_bottom_20">In addition, also adult audiences with no or very limited knowledge on the issue of children deprived of liberty will benefit from such a cartoon. The animated video will mainly target schools and educational institutions via the many GC and RLF networks and partners across the globe.</p>
-                    <p><strong>Project Contacts</strong>: Angela Melchiorre, GCHQ, <a href="mailto:angela.melchiorre@gchumanrights.org" class="titolo_gc_hq">angela.melchiorre@gchumanrights.org</a> - Manuela Pegoraro, GCHQ, <a href="mailto:manuela.pegoraro@gchumanrights.org" class="titolo_gc_hq">manuela.pegoraro@gchumanrights.org</a></p>
+                    <p><strong>Project Contacts</strong>: Angela Melchiorre, GCHQ, <a href="mailto:angela.melchiorre@gchumanrights.org" class="titolo_gc_europe">angela.melchiorre@gchumanrights.org</a> - Manuela Pegoraro, GCHQ, <a href="mailto:manuela.pegoraro@gchumanrights.org" class="titolo_gc_europe">manuela.pegoraro@gchumanrights.org</a></p>
                 </div>
             </div>
             <div class="accordion margin_bottom_20 accordion_gc_hq">
@@ -59,9 +59,9 @@
                         <li>protection of children of victims of femicide</li>
                         <li>the development of a toolkit for school to raise awareness about the rights of refugee children</li>
                     </ul>
-                    <p class="margin_bottom_20">For more information, please visit the <a href="https://gchumanrights.org/chra" class="titolo_gc_hq" target="_blank">project website</a>.</p>
+                    <p class="margin_bottom_20">For more information, please visit the <a href="https://gchumanrights.org/chra" class="titolo_gc_europe" target="_blank">project website</a>.</p>
                     <p><strong>Project Contact</strong>: Alberta Rocca, GCHQ</p>
-                    <p class="margin_bottom_20"><strong>E-mail</strong>: <a href="mailto:alberta.rocca@gchumanrights.org" class="titolo_gc_hq">alberta.rocca@gchumanrights.org</a></p>
+                    <p class="margin_bottom_20"><strong>E-mail</strong>: <a href="mailto:alberta.rocca@gchumanrights.org" class="titolo_gc_europe">alberta.rocca@gchumanrights.org</a></p>
                 </div>
             </div>
             <div class="accordion margin_bottom_20 accordion_gc_hq">
@@ -85,7 +85,7 @@
                         <li>The PhD must be completed in 3-4 years</li>
                     </ul>
                     <p><strong>Project Contact</strong>: Reina-Marie Loader, GCHQ</p>
-                    <p class="margin_bottom_20"><strong>E-mail</strong>: <a href="mailto:reinamarie.loader@gchumanrights.org" class="titolo_gc_hq">reinamarie.loader@gchumanrights.org</a></p>
+                    <p class="margin_bottom_20"><strong>E-mail</strong>: <a href="mailto:reinamarie.loader@gchumanrights.org" class="titolo_gc_europe">reinamarie.loader@gchumanrights.org</a></p>
                 </div>
             </div>
             <div class="accordion margin_bottom_20 accordion_gc_hq">
@@ -106,7 +106,7 @@
                         <li>Phase 4: Each region is given the opportunity to involve students in the organisation of regional events so as to discuss their findings with local authorities, experts, stakeholders and general audiences.</li>
                     </ul>
                     <p><strong>Project Contact</strong>: Manu Krishan, GCHQ working from Vienna</p>
-                    <p class="margin_bottom_20"><strong>E-mail</strong>: <a href="mailto:manu.krishan@gchumanrights.org" class="titolo_gc_hq">manu.krishan@gchumanrights.org</a></p>
+                    <p class="margin_bottom_20"><strong>E-mail</strong>: <a href="mailto:manu.krishan@gchumanrights.org" class="titolo_gc_europe">manu.krishan@gchumanrights.org</a></p>
                 </div>
             </div>
             <div class="accordion margin_bottom_20 accordion_gc_hq">
@@ -121,7 +121,7 @@
                     <p>[nbsp]</p>
                     <p class="margin_bottom_20">Children’s participation in matters that affect their life is one of the four general principles of the <em>Convention on the Rights of the Child</em>. Climate change and a degraded environment have a demonstrated detrimental effect on children’s lives. While various initiatives around the globe focus on protecting children from such effect, far less attention is devoted to recognising that children have a right to participate in decisions about how to deal with the impact of environmental crisis – i.e. how to deal with their future.</p>
                     <p class="margin_bottom_20">Placed at the intersection of Child Participation, Human Rights and the Environment, this Massive Open Online Course (MOOC) will be a truly unique educational and advocacy tool that is not available elsewhere. Through free and open access to current knowledge and debates on critical issues and practical options for rights-based youth activism on climate change, it will reach a worldwide audience to inform those who are still unaware, encourage those who are curious to know more, support those who are already acting, and ultimately boost effective change. </p>
-                    <p><strong>Project Contacts</strong>: Angela Melchiorre, GCHQ, <a href="mailto:angela.melchiorre@gchumanrights.org" class="titolo_gc_hq">angela.melchiorre@gchumanrights.org</a> - Manuela Pegoraro, GCHQ, <a href="mailto:manuela.pegoraro@gchumanrights.org" class="titolo_gc_hq">manuela.pegoraro@gchumanrights.org</a></p>
+                    <p><strong>Project Contacts</strong>: Angela Melchiorre, GCHQ, <a href="mailto:angela.melchiorre@gchumanrights.org" class="titolo_gc_europe">angela.melchiorre@gchumanrights.org</a> - Manuela Pegoraro, GCHQ, <a href="mailto:manuela.pegoraro@gchumanrights.org" class="titolo_gc_europe">manuela.pegoraro@gchumanrights.org</a></p>
                 </div>
             </div>
             <div class="accordion margin_bottom_20 accordion_gc_hq">
@@ -138,7 +138,7 @@
                     <p class="margin_bottom_20">The goal of this follow-up MOOC is to integrate the unique knowledge contained in the GS with practical information on the regional implementation of the GS recommendations, plans of action and further initiatives by different stakeholders/actors (IOs, States, NHRIs, NPMs, NGOs…).</p>
                     <p class="margin_bottom_20">The topic area remains ‘Children Deprived of Liberty’ and is enriched by course materials (videos, readings, etc.) and activities (quizzes, discussions, etc.) developed with the GS Team, experts and GC/RLF children’s officers.</p>
                     <p class="margin_bottom_20">This MOOC targets current GC students and alumni, existing and new GC MOOCs’ subscribers, GS partners, the RLF network and the Right Livelihood College, anyone interested in children’s rights and civil society at large.</p>
-                    <p><strong>Project Contacts</strong>: Angela Melchiorre, GCHQ, <a href="mailto:angela.melchiorre@gchumanrights.org" class="titolo_gc_hq">angela.melchiorre@gchumanrights.org</a> - Manuela Pegoraro, GCHQ, <a href="mailto:manuela.pegoraro@gchumanrights.org" class="titolo_gc_hq">manuela.pegoraro@gchumanrights.org</a></p>
+                    <p><strong>Project Contacts</strong>: Angela Melchiorre, GCHQ, <a href="mailto:angela.melchiorre@gchumanrights.org" class="titolo_gc_europe">angela.melchiorre@gchumanrights.org</a> - Manuela Pegoraro, GCHQ, <a href="mailto:manuela.pegoraro@gchumanrights.org" class="titolo_gc_europe">manuela.pegoraro@gchumanrights.org</a></p>
                 </div>
             </div>
             <div class="accordion margin_bottom_20 accordion_gc_hq">
@@ -158,7 +158,7 @@
                         <li>Support children deprived of liberty in the context of migration by identifying non-custodial measures and other good practices as an alternative to their deprivation of liberty.</li>
                     </ul>
                     <p><strong>Project Contact</strong>: Elisa Klein Díaz, GCHQ working from Vienna</p>
-                    <p class="margin_bottom_20"><strong>E-mail</strong>: <a href="mailto:elisa.klein-diaz@gchumanrights.org" class="titolo_gc_hq">elisa.klein-diaz@gchumanrights.org</a></p>
+                    <p class="margin_bottom_20"><strong>E-mail</strong>: <a href="mailto:elisa.klein-diaz@gchumanrights.org" class="titolo_gc_europe">elisa.klein-diaz@gchumanrights.org</a></p>
                 </div>
             </div>
             <div class="accordion margin_bottom_20 accordion_gc_hq">
@@ -181,7 +181,7 @@
                     </ul>
                     <p class="margin_bottom_20">The translated versions of the Executive Summary will facilitate further Global Study related research and/or advocacy projects and support the dissemination and implementation of the Global Study recommendations.</p>
                     <p><strong>Project Contact</strong>: Georges Younes, GCHQ working from Vienna</p>
-                    <p class="margin_bottom_20"><strong>E-mail</strong>: <a href="mailto:georges.younes@univie.ac.at" class="titolo_gc_hq">georges.younes@univie.ac.at</a></p>
+                    <p class="margin_bottom_20"><strong>E-mail</strong>: <a href="mailto:georges.younes@univie.ac.at" class="titolo_gc_europe">georges.younes@univie.ac.at</a></p>
                 </div>
             </div>
             <div class="accordion margin_bottom_20 accordion_gc_hq">
@@ -196,7 +196,7 @@
                     <p>[nbsp]</p>
                     <p class="margin_bottom_20">A new website for the UN Global Study on Children Deprived of Liberty will be created to showcase the development of all the activities related to the Global Study.</p>
                     <p class="margin_bottom_20">his new working tool aims at optimising communication and promotion, facilitating contacts and networking and providing user-oriented services. Thanks to the digital tools provided to the users, the platform will be the focal point of all UNGS activities. </p>
-                    <p><strong>Project Contacts</strong>: Nicola Tonon, GCHQ, <a href="mailto:nicola.tonon@gchumanrights.org" class="titolo_gc_hq">nicola.tonon@gchumanrights.org</a> - Samuele Schiavon, Babel Studio, <a href="mailto:samuele@babelstudio.it" class="titolo_gc_hq">samuele@babelstudio.it</a></p>
+                    <p><strong>Project Contacts</strong>: Nicola Tonon, GCHQ, <a href="mailto:nicola.tonon@gchumanrights.org" class="titolo_gc_europe">nicola.tonon@gchumanrights.org</a> - Samuele Schiavon, Babel Studio, <a href="mailto:samuele@babelstudio.it" class="titolo_gc_europe">samuele@babelstudio.it</a></p>
                 </div>
             </div>
             <div class="accordion margin_bottom_20 accordion_gc_hq">
@@ -212,9 +212,9 @@
                     <p class="margin_bottom_20">The Venice School is an annual programe of the Global Campus devoted to strengthening the work of human rights defenders both generally and in relation to campaigns for gender equality, protection against all forms of gender-based violence, and safeguarding children’s rights.</p>
                     <p class="margin_bottom_20">The children’s rights thematic stream of the School has been designed to explore possibilities for engaging children as human rights defenders, raising awareness of human rights for future generations, operationalising children’s rights to participation in all matters concerning them, and generally strengthening the protection of the rights of the child.</p>
                     <p class="margin_bottom_20">The 2021 edition will take place in April 2021 and will be advertised to the public. Sakharov Fellows, EED sponsored participants and the Russian Master’s students from the PFUR consortium will also be enrolled as participants.</p>
-                    <p class="margin_bottom_20">For more information, please visit the <a href="https://gchumanrights.org/veniceschool" class="titolo_gc_hq" target="_blank">project website</a>.</p>
+                    <p class="margin_bottom_20">For more information, please visit the <a href="https://gchumanrights.org/veniceschool" class="titolo_gc_europe" target="_blank">project website</a>.</p>
                     <p><strong>Project Contact</strong>: Alberta Rocca, GCHQ</p>
-                    <p class="margin_bottom_20"><strong>E-mail</strong>: <a href="mailto:alberta.rocca@gchumanrights.org" class="titolo_gc_hq">alberta.rocca@gchumanrights.org</a></p>
+                    <p class="margin_bottom_20"><strong>E-mail</strong>: <a href="mailto:alberta.rocca@gchumanrights.org" class="titolo_gc_europe">alberta.rocca@gchumanrights.org</a></p>
                 </div>
             </div>
         </div>
