CRP - Added Schools Human Rights Moot Court Competitions

--- a/website/03-Research/Projects/children-rights/accordions-rlf-africa.html
+++ b/website/03-Research/Projects/children-rights/accordions-rlf-africa.html
@@ -52,6 +52,31 @@
                     <p class="margin_bottom_20"><strong>Project Contacts</strong>: Karabo Ozah, University of Pretoria, <a href="mailto:karabo.ozah@up.ac.za" class="titolo_gc_africa">karabo.ozah@up.ac.za</a>; Ann Skelton, University of Pretoria <a href="mailto:ann.skelton@up.ac.za" class="titolo_gc_africa">ann.skelton@up.ac.za</a></p>
                 </div>
             </div>
+            <div class="accordion margin_bottom_20 accordion_gc_africa">
+                <div class="icon_e_title_accordion_nested_africa">
+                    <div class="piu_accordion_nested">
+                        <div class="verticale">[nbsp][nbsp][nbsp]</div>
+                        <div class="orizzontale">[nbsp][nbsp][nbsp]</div>
+                    </div>
+                    <p class="title_accordion titolo_gc_africa">Schools Human Rights Moot Court Competitions</p>
+                </div>
+                <div class="text_accordion_nested">
+                    <p>[nbsp]</p>
+                    <p class="margin_bottom_20">Based on the experience obtained with the <a href="https://www.icla.up.ac.za/national-schools-moot" target="_blank" class="titolo_gc_africa">South African Schools Human Rights Moot Court Competition</a>, the Centre for Human Rights at the University of Pretoria will work with local partners to <a href="https://www.icla.up.ac.za/world-schools-moot" target="_blank" class="titolo_gc_africa">establish similar competitions in other parts of the world</a>. Specifically, the project will first be established in Ethiopia, Ghana and Nepal. This will then be followed by other countries worldwide.</p>
+                    <p class="margin_bottom_20">Schools human rights moots have shown to be valuable educational tools enabling children to solve problems based on a human rights framework.</p>
+                    <p class="margin_bottom_10">The model we are pursuing is the following:</p>
+                    <ul class="lista_con_pallini margin_bottom_20">
+                        <li>The moots are based on a hypothetical problem, which the learners have to address as if they are the lawyers for the applicant and then also for the respondents.</li>
+                        <li>Their arguments should be based on the bill of rights of their country.</li>
+                        <li>The final round of the moot takes place in the highest court of the country.</li>
+                        <li>Where possible, participation in the moot is part of the school curriculum.</li>
+                        <li>The national human rights institution of the country in question facilitates the organisation of the moot.</li>
+                    </ul>
+                    <p class="margin_bottom_20">Ultimately, it is anticipated that these moots will culminate in a world human rights moot court competition for high school learners.</p>
+                    <p><strong>Project Contact</strong>: Nyambeni Davhana</p>
+                    <p class="margin_bottom_20"><strong>E-mail</strong>: <a href="mailto:nyambeni.davhana@up.ac.za" class="titolo_gc_africa">nyambeni.davhana@up.ac.za</a></p>
+                </div>
+            </div>
         </div>
     </div>
 </div>
