OC-IEO - Course Outline p2 - initial Commit
Added fixes to Lectures and experts.
NB Firse comment

<style>a[name] {
	padding-top: 92px;
	margin-top: -92px;
	display: inline-block; /* required for webkit browsers */
}</style>

--- a/website/02-Education/OC/IEO/02-lecturers-experts-part02.html
+++ b/website/02-Education/OC/IEO/02-lecturers-experts-part02.html
@@ -1,5 +1,15 @@
-<!--<p class="subtitle_page_programme">Training Responsible</p>-->
+<!-- STYLE TO FIX HEIGHT 
+
+<style>a[name] {
+    padding-top: 92px;
+    margin-top: -92px;
+    display: inline-block; /* required for webkit browsers */
+}</style>
+
+-->
+
 <div class="table_accordion">
+    <a class="top" name="dm"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/lazagna.jpg" alt="lazagna">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_europe">Training Responsible</p>
@@ -37,8 +47,10 @@
 </div>
 </div>
 </div>-->
+    <a class="top" name="ac"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/ieo/2018/Alice_Colombi_global_campus_eiuc_ieo.jpg" alt="Alice Colombi">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
+            <p class="ruolo_persona titolo_gc_europe">Media Expert</p>
             <p class="subtitle_page_programme margin_bottom_20">Alice Colombi</p>
             <p class="margin_bottom_20">Alice is an international consultant in media analysis and social media monitoring with some 15 years’ experience in the field of elections, democracy and governance from across Eastern and Western Europe, Central Asia, Africa, Central and South America.</p>
             <div class="text_read_more">
@@ -91,8 +103,10 @@
 </div>
 </div>
 </div>-->
+    <a class="top" name="cg"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/ieo/2019/Charlemagne_Gomez_global_campus.jpg" alt="Charlemagne Gomez">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
+            <p class="ruolo_persona titolo_gc_europe">Election Observation Expert</p>
             <p class="subtitle_page_programme margin_bottom_20">Charlemagne Gomez</p>
             <p class="margin_bottom_20">Charlemagne Gomez has a degree in European Law and a master’s degree in Human Rights and Democratization from the Global Campus of Human Rights. She is currently finalizing a second master’s degree in Evaluation of public policies and programs in Madrid.</p>
             <div class="text_read_more">
