--- a/website/02-Education/moocs/ungs/00-menuspalla-ongoing.html
+++ b/website/02-Education/moocs/ungs/00-menuspalla-ongoing.html
@@ -1,6 +1,6 @@
 <aside class="spalla_sx spalla_gc">
     <nav class="mod_customnav tab_spalla block">
-        {{insert_module::153}}
+        {{insert_module::185}}
     </nav>
     <div class="ce_text deadline block">
         <p class="margin_bottom_5">Course dates:</p>
@@ -28,6 +28,6 @@
     </div>
     <div class="ce_text block">
         <div class="title_page_programme_e_logo">
-            <h3 class="title_page_programme titolo_gc_europe">Fundamental Rights of the European Union MOOCs</h3>
+            <h3 class="title_page_programme titolo_gc_europe">Children Deprived of Liberty: Learning from the UN Global Study</h3>
         </div>
     </div>
