OC IEO - Lectures - New pictures and small fixes

--- a/website/02-Education/OC/IEO/02-lecturers-experts-part02.html
+++ b/website/02-Education/OC/IEO/02-lecturers-experts-part02.html
@@ -10,7 +10,7 @@
 
 <div class="table_accordion">
     <a class="top" name="dm"></a>
-    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/lazagna.jpg" alt="lazagna">
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/ieo/2020/Demetrio_Lazagna_IEO_gchumnanrights.png" alt="Demetrio Lazagna">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_europe">Training Responsible</p>
             <p class="subtitle_page_programme margin_bottom_20">Demetrio Lazagna</p>
@@ -48,7 +48,7 @@
 </div>
 </div>-->
     <a class="top" name="ac"></a>
-    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/ieo/2018/Alice_Colombi_global_campus_eiuc_ieo.jpg" alt="Alice Colombi">
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/ieo/2020/Alice_Colombi_IEO_gchumanrights.png" alt="Alice Colombi">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_europe">Media Expert</p>
             <p class="subtitle_page_programme margin_bottom_20">Alice Colombi</p>
@@ -366,13 +366,15 @@
             </div>
         </div>
     </div>-->
-    <!-- <div class="table_people_cell"><img class="img_persona" src="files/eiuc/ieo/2018/Armin_Rabitsch_global_campus_eiuc.jpg" alt="Armin Rabitsch">
+    <a class="top" name="ar"></a>
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/ieo/2020/Armin_Rabitsch_IEO_gchumanrights.png" alt="Armin Rabitsch">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
+            <p class="ruolo_persona titolo_gc_europe">Chairperson of Election-Watch.EU</p>
             <p class="subtitle_page_programme margin_bottom_20">Armin Rabitsch</p>
-            <p class="margin_bottom_20">Armin Rabitsch studied at Universities in Austria (Innsbruck, Vienna), South Africa (Cape Town, Western Cape), Italy (European University Institute) and the UK (London School of Economics) and holds a PhD in international relations.</p>
+            <p class="margin_bottom_20">Armin is the chairperson and co-founder of Election-Watch.EU, a non-partisan CSO, which conducted the first comprehensive election assessment mission to the European Parliament elections, and is advocating for participatory electoral reforms and young voter education in the Europe.</p>
             <div class="text_read_more">
-                <p class="margin_bottom_20">Armin is a senior governance expert with over 20 years of experience in democratisation and governance support; especially in the areas of parliamentary support, electoral assistance, election observation, implementation of a rights-based approach and governance reforms.</p>
-                <p class="margin_bottom_20">Armin gained experience as IFES Chief of Party, OSCE/ODIHR Senior Election Adviser and as UNDP Governance Analyst and has been covering the full electoral cycle. He led or participated in EU or OSCE/ODIHR electoral missions (project formulation-, exploratory-, needs assessment-, expert-, observation-, follow-up- and evaluation missions) and further implemented electoral assistance projects with special focus on strategic planning, preparing polling and counting procedures, preparing training curricula/materials for all polling staff, as well as biometric voter registration implementation. He gained electoral experience in more than 30 countries in Africa, America, Asia, Europe, the Middle East, and the Pacific. In Austria he has been engaged in democracy strengthening and electoral reform advocacy and chairs the civil society organisation wahlbeobachtung.org (election-watch.eu).</p>
+                <p class="margin_bottom_20">Armin has been working on democratisation and strengthening human rights with a focus on electoral assistance, political assessment, human rights and conflict mitigation. Armin held various fixed-term assignments as IFES Country Director, OSCE/ODIHR Senior Election Adviser and UNDP Governance Analyst. He worked as democracy support & election expert in more than 30 countries (African, American, Arab, Asian, and Pacific) for various international organisations, most recently for a UNDP funded project on peace and conflict monitoring in Iraq. Armin is currently co-drafting a UNESCO/UNDP guide for electoral practitioners on elections & internet, social media, and AI.</p>
+                <p class="margin_bottom_20">Armin holds a PhD in international relations and an LL.M. in international Human Rights Law. He lectures on electoral assistance in Europe and abroad, within the Masters Program in Peace Studies at the University of Innsbruck/Austria, at Universities in Baghdad and Erbil/Iraq, as well as at the Global Campus of Human Rights in Venice/Italy. </p>
             </div>
             <div class="accordion accordion_gc_europe read_more">
                 <div class="icon_e_title_accordion">
@@ -385,6 +387,7 @@
             </div>
         </div>
     </div>
+    <!--
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/ieo/2019/Sylvain_Schultze_global_campus .jpg" alt="Sylvain Schultze">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="subtitle_page_programme margin_bottom_20">Sylvain Schultze</p>
