About Us - HQ Staff - minor typo fix

--- a/website/04-About-us/Staff/Headquarters/05-childrens-rights.html
+++ b/website/04-About-us/Staff/Headquarters/05-childrens-rights.html
@@ -11,7 +11,7 @@
                 <p class="margin_bottom_20">She has lectured on the socio-political dimensions of film at several universities, including Exeter, Reading and Vienna.</p>
                 <p class="margin_bottom_20">At the University of Reading, she completed a practice-led PhD in film on the ethical representation of traumatic memory on screen.</p>
                 <p class="margin_bottom_20">This research has awarded her a nomination from the British Universities Film and Video Council for a Learning on Screen Award. In 2018, Reina completed an MA in Human Rights at the University of Vienna focused on <em>Ubuntu</em> and children deprived of liberty.</p>
-                <p>LinkedIn Profile:  <a class="titolo_gc_europe" href="https://www.linkedin.com/in/reina-marie-loader-588a0323/" target="_blank">https://www.linkedin.com/in/reinamarieloader</a></p>
+                <p>LinkedIn Profile: <a class="titolo_gc_europe" href="https://www.linkedin.com/in/reina-marie-loader-588a0323/" target="_blank">https://www.linkedin.com/in/reinamarieloader</a></p>
                 <p>Email: <a class="titolo_gc_europe" href="mailto:reinamarie.loader@gchumanrights.org">reinamarie.loader@gchumanrights.org</a></p>
                 <p>Phone: <a class="titolo_gc_europe" href="tel:+39 041 2720 960">+39 041 2720 960</a></p>
             </div>
@@ -32,9 +32,9 @@
             <p class="subtitle_page_programme margin_bottom_20">Manu Krishan</p>
             <p class="margin_bottom_20">Manu Krishan is the Coordinator of the Global Study dissemination and follow-up initiation activities.</p>
             <div class="text_read_more">
-                <p class="margin_bottom_20">During the Global Study implementation he was the Coordinator and Assistant to the Independent Expert leading the United Nations Global Study on Children deprived of Liberty based first at the Ludwig Boltzmann Institute of Human Rights followed by the Office of the High Commissioner for Human rights in Geneva. </p>
-                <p class="margin_bottom_20">Manu Krishan studied philosophy before graduating from the Vienna Master of Arts in Human Rights at the University of Vienna. He is a human rights researcher and Project Manager with proficiency in children’s rights, particularly on ethical considerations when researching with and for children.</p>
-                <p>LinkedIn Profile:  <a class="titolo_gc_europe" href="https://www.linkedin.com/in/manu-krishan-30967453/" target="_blank">https://www.linkedin.com/in/manukrishan</a></p>
+                <p class="margin_bottom_20">During the Global Study implementation he was the Coordinator and Assistant to the Independent Expert leading the United Nations Global Study on Children deprived of Liberty based first at the Ludwig Boltzmann Institute of Human Rights followed by the Office of the High Commissioner for Human rights in Geneva.</p>
+                <p class="margin_bottom_20">Manu Krishan studied philosophy before graduating from the Vienna Master of Arts in Human Rights at the University of Vienna. He is a human rights researcher and Project Manager[nbsp]with proficiency in children’s rights, particularly on ethical considerations when researching with and for children.</p>
+                <p>LinkedIn Profile: <a class="titolo_gc_europe" href="https://www.linkedin.com/in/manu-krishan-30967453/" target="_blank">https://www.linkedin.com/in/manukrishan</a></p>
                 <p>Email: <a class="titolo_gc_europe" href="mailto:manu.krishan@gchumanrights.org">manu.krishan@gchumanrights.org</a></p>
                 <!--<p>Phone: <a class="titolo_gc_europe" href="tel:+390412720952">+39 041 2720 952</a></p>-->
             </div>
@@ -51,14 +51,14 @@
     </div>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/staff/Elisa_Klein_Diaz_gchumanrights.jpg" alt="Elisa Klein Díaz - Global Campus">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
-            <p class="ruolo_persona titolo_gc_europe">Global Study Programme Support Officer,</p>
+            <p class="ruolo_persona titolo_gc_europe">Global Study Programme Support Officer</p>
             <p class="subtitle_page_programme margin_bottom_20">Elisa Klein Díaz</p>
-            <p class="margin_bottom_20">Elisa contributes to the dissemination and follow-up initiation activities to the Global Study on Children Deprived of Liberty. </p>
+            <p class="margin_bottom_20">Elisa contributes to the dissemination and follow-up initiation activities to the Global Study on Children Deprived of Liberty.[nbsp]</p>
             <div class="text_read_more">
-                <p class="margin_bottom_20">Elisa is currently working on the Global Study Toolkit on non-custodial measures as an alternative to migration-related detention and is responsible for the Global Study Newsletter. She further supports the creation of a new website for the Global Study and has also worked as editor on the Executive Summary of the Global Study on Children Deprived of Liberty. </p>
+                <p class="margin_bottom_20">Elisa is currently working on the[nbsp]Global Study Toolkit on non-custodial measures as an alternative to migration-related detention[nbsp]and is responsible for the Global Study Newsletter. She further supports the creation of a new website for the Global Study and has also worked as editor on the Executive Summary of the Global Study on Children Deprived of Liberty.[nbsp]</p>
                 <p class="margin_bottom_20">Before joining the Global Campus of Human Rights in 2020, Elisa worked in the Press and Communications Department of the Austrian Ombudsman Board and before that as consultant at the Ludwig Boltzmann Institute for Human Rights. Currently she also works at FIAN Austria as Social Rights Project Manager.</p>
-                <p class="margin_bottom_20">Elisa holds a Bachelor´s Degree in International Relations and a Master of Arts in Human Rights. Her main areas of interest are children´s rights, migration, education and social rights. </p>
-               <!--  <p>LinkedIn Profile:  <a class="titolo_gc_europe" href="https://www.linkedin.com/in/manu-krishan-30967453/" target="_blank">https://www.linkedin.com/in/manukrishan</a></p> -->
+                <p class="margin_bottom_20">Elisa holds a Bachelor´s Degree in International Relations and a Master of Arts in Human Rights. Her main areas of interest are children´s rights, migration, education and social rights.</p>
+                <!--  <p>LinkedIn Profile:  <a class="titolo_gc_europe" href="https://www.linkedin.com/in/manu-krishan-30967453/" target="_blank">https://www.linkedin.com/in/manukrishan</a></p> -->
                 <p>Email: <a class="titolo_gc_europe" href="mailto:elisa.klein-diaz@gchumanrights.org">elisa.klein-diaz@gchumanrights.org</a></p>
                 <!--<p>Phone: <a class="titolo_gc_europe" href="tel:+390412720952">+39 041 2720 952</a></p>-->
             </div>
