--- a/website/02-Education/moocs/ungs-recs/00-menuspalla.html
+++ b/website/02-Education/moocs/ungs-recs/00-menuspalla.html
@@ -23,7 +23,7 @@
         <div class="deadline_blocco_sconto">
             <div class="deadline">
                 <p class="margin_bottom_5">Course dates:</p>
-                <p class="description_blu_container titolo_gc_europe">Ongoing</p>
+                <p class="description_blu_container titolo_gc_europe">From 23 November 2020 <br>to 10 January 2021</p>
             </div>
             <div class="blocco_sconto">
                 <p class="name_quote">Free enrolment until 27 December 2020</p>
